--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DATABASE_URL=postgresql+asyncpg://<username>:<password>@<host>:<port>/<database_name>
 REDIS_URL=redis://<host>:<port>/<db_number>
 API_KEY=<api_key>
+POSTGRES_USER=<user>
+POSTGRES_PASSWORD=<password>
+POSTGRES_DB=<db_name>
