--- a/requirements.txt
+++ b/requirements.txt
@@ -5,24 +5,40 @@ anyio==4.7.0
 asyncpg==0.30.0
 billiard==4.2.1
 celery==5.4.0
+certifi==2024.12.14
+cfgv==3.4.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+distlib==0.3.9
 fastapi==0.115.6
+filelock==3.16.1
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+identify==2.6.3
 idna==3.10
+iniconfig==2.0.0
 kombu==5.4.2
 Mako==1.3.8
 MarkupSafe==3.0.2
+nodeenv==1.9.1
+packaging==24.2
+platformdirs==4.3.6
+pluggy==1.5.0
+pre_commit==4.0.1
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.10
 pydantic==2.10.4
 pydantic-settings==2.7.0
 pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.2
 redis==5.2.1
 six==1.17.0
 sniffio==1.3.1
@@ -32,4 +48,5 @@ typing_extensions==4.12.2
 tzdata==2024.2
 uvicorn==0.34.0
 vine==5.1.0
+virtualenv==20.28.0
 wcwidth==0.2.13
